--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Ultra&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  box-sizing: border-box;
+}
+
 #nav_wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 0.5rem;
+}
+
+.logo {
+  font-family: 'Ultra', serif, Arial;
+  font-size: 1.8rem;
+  color: #14213d;
+  line-height: 2;
 }
 
 .tab {
@@ -10,24 +27,32 @@
 }
 
 .tab button {
-  padding: 1rem;
+  padding: 0.2rem 1.5rem;
+  background-color: transparent;
   border: none;
   cursor: pointer;
   outline: none;
   transition: 0.3s;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  color: #03045e;
 }
 
 .tab button:hover {
-  border-bottom: 3px solid green;
+  border-bottom: 3px solid #fca311;
+  color: #fca311;
+  animation: fadeEffect 1s;
 }
 
 .tab button.active {
-  border-bottom: 3px solid green;
+  border-bottom: 3px solid #fca311;
 }
 
 .tabcontent {
   display: none;
-  animation: fadeEffect 1s;
+  /* animation: fadeEffect 1s; */
 }
 
 /* Go from zero to full opacity */
@@ -39,4 +64,45 @@
 @keyframes fadeEffect {
   from {opacity: 0;}
   to {opacity: 1;}
+}
+
+#home {
+  padding: 0.5rem;
+}
+
+.heroWrapper {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero_til_wrap {
+  width: 40%;
+  padding: 4rem;
+  background-color: rgba(43, 37, 6, 0.38);
+  z-index: 10;
+}
+
+.hero_til_text {
+  font-size: 3rem;
+  /* font-family: 'Raleway', sans-serif; */
+  font-weight: 900;
+  color: white;
+  text-transform: uppercase;
+}
+
+.hero_image {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  object-position: center;
+  -o-object-fit: cover;
+  -o-object-position: center;
 }
