--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
 * {
   margin: 0;
@@ -105,4 +106,134 @@
   object-position: center;
   -o-object-fit: cover;
   -o-object-position: center;
+}
+
+.dish_container {
+  width: 100%;
+  height: 70vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.menu_image {
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  -o-object-fit: cover;
+  -o-object-position: center;
+}
+
+.dish_text_area {
+  padding: 20%;
+  align-self: center;
+}
+
+.dish_title {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 2rem;
+  color: #14213d;
+  margin-bottom: 1rem;
+}
+
+.dish_text {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.2rem;
+  color: #14213d;
+}
+
+.dish_price {
+  text-align: end;
+  color: #fca311;
+  font-weight: 700;
+}
+
+#contact {
+  height: 90vh;
+}
+
+.grid_contact {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3fr 1fr;
+  grid-template-areas: 
+      "text map"
+      "social map";
+}
+
+.contact_text_area {
+  grid-area: text;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10%;
+}
+
+.contact_social_area {
+  grid-area: social;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10%;
+}
+
+.contact_map_area {
+  grid-area: map;
+}
+
+.social_icon {
+  width: 2.5rem;
+}
+
+.contact_title {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 2rem;
+  color: #14213d;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.contact_elem_wrap {
+  margin-bottom: 1.5rem;
+}
+
+.contact_elem_title {
+  font-family: 'Abril Fatface', cursive;
+}
+
+.contact_elem_value {
+  font-family: 'Raleway', sans-serif;
+  color: #14213d;
+  text-decoration: none;
+}
+
+.social_media_wrap {
+  list-style: none;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+.contact_social_link {
+  margin-right: 0.5rem;
+}
+
+.contact_social_link a {
+  height: fit-content;
+  width: fit-content;
+}
+
+.contact_social_link a:hover {
+  background-color: #fca311;
+  height: fit-content;
+  width: fit-content;
+}
+
+.contact_map_area iframe {
+  height: 100%;
+  width: 100%;
 }
